<resources>
    <string name="app_name">Realized Vision</string>
    <string name="sign_up">Sign Up</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="logout">Logout</string>
    <string name="favorites">favorites</string>
    <string name="message">message</string>
    <string name="profile">profile</string>
    <string name="login_now">Login Now</string>
    <string name="realized_vision">Realized Vision</string>
    <string name="profile_name_format">%1$s %2$s</string>
    <string name="posting_content_description">Posting Content Description</string>
    <string name="openRouteServiceApi">5b3ce3597851110001cf624847b71804162340aba367fb026dde707c</string>


    <string name="Favorites">Favorites</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="home">Home</string>
    <string name="Checkout">Checkout</string>
    <string name="web_client_id">13504432131-gn4q36nf3tvnodj7vnc0abmebm9csb53.apps.googleusercontent.com</string>
    <string name="item_image">Item Image</string>
    <string name="product_vendor">Product Vendor</string>
    <string name="product_description">Product description</string>
    <string name="category">Category</string>
    <string name="back_button">Back button</string>
</resources>