<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".FavoritesActivity"
    >
    <TextView
        android:id="@+id/favorites_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Favorites"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/favorites_header"
        app:layout_constraintTop_toBottomOf="@id/favorites_text"
        android:padding="3dp"
        >

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Favorites"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cart_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/shopping_cart"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@id/favorites_header"

        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#BF360C"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="4">


        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/favorites_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite"
            android:contentDescription="@string/favorites"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/messages_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_message"
            android:contentDescription="@string/message"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>