<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <!-- Messages Text -->
    <TextView
        android:id="@+id/messages_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Messages"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Chat list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/messages_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    <!-- Bottom navigation bar -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#BF360C"
        android:padding="8dp"
        android:gravity="center"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/favorites_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite"
            android:contentDescription="@string/favorites"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/messages_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_message"
            android:contentDescription="@string/message"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
